# cmake-hosttools

./: .travis.yml  CMakeLists.txt  README.md  hostmain.cpp  main.cpp
.github/workflows/: cmake.yml
